--- a/src/Component2.css
+++ b/src/Component2.css
@@ -1,13 +1,42 @@
 .cell {
   border: 2px solid red;
   text-align: center;
-  padding: 16px;
-  margin: 6px;
+  /* padding: 16px; */
+  /* margin: 6px; */
   margin-top: 20px;
   border-radius: 10px;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 main {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.cell input {
+  width: 10px;
+  background: none;
+  border: 1px dashed;
+  cursor: pointer;
+  font-size: 20px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+}
+
+.plus {
+  cursor: pointer;
+  height: 50px;
+  position: absolute;
+  z-index: 1;
+  right: -7px;
+  width: 10px;
+}
+.plus:hover {
+  background: rgba(238, 27, 30, 0.3);
 }
