--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
 }
 .guess-me {
   /* background-color: orange; */
-  width: 200px;
+  width: 240px;
   height: 200px;
   text-align: center;
 }
@@ -51,4 +51,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
